# DataDevFest-Automatic-Check-In

./: README.md  pyproject.toml
src/: main.py
src/connectors/: gsheets_client.py
src/static/assets/css/: style.css
src/templates/: index.html
